# Diff_myers

./: .gitignore  CMakeLists.txt
src/: config.h  main.cpp
src/cmp/: Analyze.cpp  Analyze.h  Cmp.cpp  Cmp.h  Myers.cpp  Myers.hcc  Myers.hpp
src/dataStruct/: Coord.cpp  Coord.h  Note.cpp  Note.h  PianoRoll.cpp  PianoRoll.h  PianoRolll.cpp  PianoRolll.h  Tree.cpp  Tree.h
src/plot/: IntoMyers.cpp  IntoMyers.h  PlotCmp.cpp  PlotCmp.h
src/utils/: utils.cpp  utils.hpp
